[build-system]
requires = [
    "setuptools>=45",
]
build-backend = "setuptools.build_meta"

[project]
name = "CherrypyScheduler"
version = "0.1.1"
description = "Repeating task scheduler for Cherrypy webserver!"
authors = [
    {name="SawyerSteven", email="sawyerstevenk@gmail.com"}
]
readme = {content-type='utf-8', file='README.md'}
license = {file = "LICENSE"}
classifiers=[
    "Programming Language :: Python 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'cherrypy',
]

[tool.setuptools]
py-modules = ["cherrypyscheduler"]

[project.urls]
repository = "https://github.com/sawyersteven/CherrypyScheduler"
documentation = "https://github.com/sawyersteven/CherrypyScheduler/wiki"
